force-app/main/default/objects/Opportunity/fields/AcceptedQuotes__c.field-meta.xml
<CustomField>
    <fullName>AcceptedQuotes__c</fullName>
    <label># Accepted Quotes</label>
    <summaryFilterItems>
        <field>Quote.Status</field>
        <operation>equals</operation>
        <value>Quote Accepted</value>
    </summaryFilterItems>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>