force-app/main/default/objects/Opportunity/fields/addLossReason__c.field-meta.xml
<CustomField>
    <fullName>addLossReason__c</fullName>
    <description>being used to capture valueable info when Loss Reason = other</description>
    <label>addLossReason</label>
    <type>TextArea</type>
</CustomField>