force-app/main/default/objects/Opportunity/fields/CoffeeMachine__c.field-meta.xml
<CustomField>
    <fullName>CoffeeMachine__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Coffee Machine</label>
    <type>Checkbox</type>
</CustomField>