force-app/main/default/objects/Opportunity/fields/CoffeeSupplier__c.field-meta.xml
<CustomField>
    <fullName>CoffeeSupplier__c</fullName>
    <label>Coffee Supplier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>