force-app/main/default/objects/Opportunity/fields/Competitor__c.field-meta.xml
<CustomField>
    <fullName>Competitor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Displays the competitor account, when an opportunity is lost due to current contracts with competitor.</inlineHelpText>
    <label>Competitor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Lost to)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>