force-app/main/default/objects/Opportunity/fields/CompetitorContractExpiryDate__c.field-meta.xml
<CustomField>
    <fullName>CompetitorContractExpiryDate__c</fullName>
    <label>Competitor Contract expiry date</label>
    <type>Date</type>
</CustomField>