force-app/main/default/objects/Opportunity/fields/DailyNumberOfCups__c.field-meta.xml
<CustomField>
    <fullName>DailyNumberOfCups__c</fullName>
    <label>Daily Number Of Cups</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>