force-app/main/default/objects/Opportunity/fields/DecisionMakerContactRoleSetHelper__c.field-meta.xml
<CustomField>
    <fullName>DecisionMakerContactRoleSetHelper__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Helper field to indicate, if a Contact Role of Decision Maker has been set.</description>
    <label>Primary Contact Role Set</label>
    <type>Checkbox</type>
</CustomField>