force-app/main/default/objects/Opportunity/fields/DrinkChoice__c.field-meta.xml
<CustomField>
    <fullName>DrinkChoice__c</fullName>
    <label>Drink choice</label>
    <type>TextArea</type>
</CustomField>