force-app/main/default/objects/Opportunity/fields/EstimatedSalesTea__c.field-meta.xml
<CustomField>
    <fullName>EstimatedSalesTea__c</fullName>
    <inlineHelpText>In €/Jahr; Wenn kein Bedarf besteht, bitte 0 eintragen</inlineHelpText>
    <label>Estimated sales: Tea</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>