force-app/main/default/objects/Opportunity/fields/EstimatedVolumeCoffee__c.field-meta.xml
<CustomField>
    <fullName>EstimatedVolumeCoffee__c</fullName>
    <inlineHelpText>In KG/Jahr; Wenn kein Bedarf besteht, bitte 0 eintragen</inlineHelpText>
    <label>Estimated volume: Coffee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>