force-app/main/default/objects/Opportunity/fields/InterestedInCoffee__c.field-meta.xml
<CustomField>
    <fullName>InterestedInCoffee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interested in Coffee</label>
    <type>Checkbox</type>
</CustomField>