force-app/main/default/objects/Opportunity/fields/InterestedInHotChocolate__c.field-meta.xml
<CustomField>
    <fullName>InterestedInHotChocolate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interested in hot chocolate</label>
    <type>Checkbox</type>
</CustomField>