force-app/main/default/objects/Opportunity/fields/InterestedInMachines__c.field-meta.xml
<CustomField>
    <fullName>InterestedInMachines__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interested in machines</label>
    <type>Checkbox</type>
</CustomField>