force-app/main/default/objects/Opportunity/fields/LossReason__c.field-meta.xml
<CustomField>
    <fullName>LossReason__c</fullName>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lost to Competitor</fullName>
            </value>
            <value>
                <fullName>No Budget / Lost Funding</fullName>
            </value>
            <value>
                <fullName>No Decision / Non-Responsive</fullName>
            </value>
            <value>
                <fullName>Long Sales Cycle</fullName>
            </value>
            <value>
                <fullName>Length of Sales Cycle</fullName>
            </value>
            <value>
                <fullName>Change of Management</fullName>
            </value>
            <value>
                <fullName>Business Closed</fullName>
            </value>
            <value>
                <fullName>Quality/Taste (Coffee)</fullName>
            </value>
            <value>
                <fullName>Product/Solution not satisfying</fullName>
            </value>
            <value>
                <fullName>Failed Credit Check</fullName>
            </value>
            <value>
                <fullName>Failed Sanction List</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Rejected by Masterdata</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>