force-app/main/default/objects/Opportunity/fields/MachineRequirement__c.field-meta.xml
<CustomField>
    <fullName>MachineRequirement__c</fullName>
    <label>Machine requirement</label>
    <type>TextArea</type>
</CustomField>