force-app/main/default/objects/Opportunity/fields/MasterDataCheckStatus__c.field-meta.xml
<CustomField>
    <fullName>MasterDataCheckStatus__c</fullName>
    <formula>TEXT ( MasterDataValidationCase__r.Status )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Master Data Check Status</label>
    <type>Text</type>
</CustomField>