force-app/main/default/objects/Opportunity/fields/MasterDataValidationCase__c.field-meta.xml
<CustomField>
    <fullName>MasterDataValidationCase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Data Validation Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>