force-app/main/default/objects/Opportunity/fields/NrOfLineItems__c.field-meta.xml
<CustomField>
    <fullName>NrOfLineItems__c</fullName>
    <description>mainly used as reference for automated processes in order to either generate LineItems or update LineItems</description>
    <label># of Line Items</label>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>