force-app/main/default/objects/Opportunity/fields/NrOfSyncedQuotes__c.field-meta.xml
<CustomField>
    <fullName>NrOfSyncedQuotes__c</fullName>
    <label># of Synced Quotes</label>
    <summaryFilterItems>
        <field>Quote.IsSyncing</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>