force-app/main/default/objects/Opportunity/fields/NumberOfOpenOppsAccount__c.field-meta.xml
<CustomField>
    <fullName>NumberOfOpenOppsAccount__c</fullName>
    <formula>Account.RunningOpportunities__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of Open Opps (Account)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>