force-app/main/default/objects/Opportunity/fields/NumberOfQuotes__c.field-meta.xml
<CustomField>
    <fullName>NumberOfQuotes__c</fullName>
    <label># of Quotes</label>
    <summaryForeignKey>Quote.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>