force-app/main/default/objects/Opportunity/fields/PrimaryContactFunctionSet__c.field-meta.xml
<CustomField>
    <fullName>PrimaryContactFunctionSet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Primary Contact Function Set</label>
    <type>Checkbox</type>
</CustomField>