force-app/main/default/objects/Opportunity/fields/Timeframe__c.field-meta.xml
<CustomField>
    <fullName>Timeframe__c</fullName>
    <label>Timeframe</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediately</fullName>
            </value>
            <value>
                <fullName>1-3 Weeks</fullName>
            </value>
            <value>
                <fullName>3-6 Weeks</fullName>
            </value>
            <value>
                <fullName>6-12 Weeks</fullName>
            </value>
            <value>
                <fullName>Next Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>