force-app/main/default/objects/Opportunity/validationRules/StageQuoteSigned_ChangedBack.validationRule-meta.xml
<ValidationRule>
    <fullName>StageQuoteSigned_ChangedBack</fullName>
    <active>false</active>
    <description>Ensures that once a quote is signed, the Opportunity can only transition directly to &apos;Closed Won&apos; or &apos;Closed Lost&apos; and cannot be moved back to any prior pipeline stages.</description>
    <errorConditionFormula>ISCHANGED(StageName) &amp;&amp; 
ISPICKVAL(PRIORVALUE(StageName), &apos;Quote Signed&apos;) &amp;&amp; 
NOT(ISPICKVAL(StageName, &apos;Closed Won&apos;)) &amp;&amp; 
NOT(ISPICKVAL(StageName, &apos;Closed Lost&apos;)) &amp;&amp; 
NOT(ISCHANGED(SkipValidations__c))</errorConditionFormula>
    <errorMessage>A quote has already been signed; this Opportunity can only be Closed!</errorMessage>
</ValidationRule>