force-app/main/default/objects/Opportunity/validationRules/ValidateClosedWon.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidateClosedWon</fullName>
    <active>false</active>
    <description>Checks whether an opportunity has the required information to be considered as Closed Won</description>
    <errorConditionFormula>AND(ISCHANGED(StageName), ISPICKVAL(StageName, &apos;Closed Won&apos;), 
				OR(ISPICKVAL(Type, &apos;&apos;), 
				 ISPICKVAL(Account.TypeOfBusiness__c, &apos;&apos;),   
					ISBLANK(Account.ShippingPostalCode), 
					DecisionMakerContactRoleSetHelper__c = FALSE, 
					PrimaryContactFunctionSet__c = FALSE, 
					ISBLANK(Account.EmailInvoiceTo__c), 
					ISPICKVAL(Account.InvoiceType__c, &apos;&apos;), 
				 ISBLANK(Account.SupervisedByTenantUserID__c)))</errorConditionFormula>
    <errorMessage>Mandatory fields are required to close this Opportunity.
 Please check the &quot;New Customer Notification&quot; tab.</errorMessage>
</ValidationRule>